# Camera-Control

./: .gitignore  CMakeLists.txt  README.md  camera_config.toml
include/: camera_app.h  rgb_camera_manager.h  utils.h
include/sony_include/: CameraDevice.h
src/: camera_app.cpp  main.cpp  rgb_camera_manager.cpp  utils.cpp
src/sony_src/: CameraDevice.cpp
